# lovewords

./: CONTRIBUTING.md  README.md
.github/workflows/: rust.yml
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  BOARD_DESIGN_GUIDE.md  DECISION_QUEUE.md  FOUNDER_INTERFACE.md  HEURISTICS.md  ISSUE_21_IMPLEMENTATION_PLAN.md  ROADMAP.md  SPRINT_5_PLANNING.md  VISION.md
lovewords-core/: Cargo.toml
lovewords-core/boards/: love-and-affection.json
lovewords-core/src/: error.rs  lib.rs
lovewords-core/src/accessibility/: mod.rs
lovewords-core/src/board/: cell.rs  mod.rs  navigation.rs
lovewords-core/src/input/: event.rs  mod.rs  scanning.rs
lovewords-core/src/obf/: board.rs  extensions.rs  mod.rs
lovewords-core/src/speech/: mod.rs  trait.rs
lovewords-core/src/storage/: memory.rs  mod.rs  profile.rs
lovewords-core/tests/: integration_test.rs
lovewords-web/: .gitignore  ACCESSIBILITY_TESTING.md  README.md  index.html  package-lock.json  package.json
lovewords-web/.github/: SPRINT_1_ISSUES.md  SPRINT_3_COMPLETION.md  SPRINT_3_ISSUES.md  SPRINT_3_ISSUE_SUMMARY.md
lovewords-web/docs/: COMMUNITY_BROWSE_TESTING.md  COMPETITIVE_ANALYSIS.md  CONTEXTUALISM_ROADMAP.md  DEVELOPER_GUIDE.md  DEVELOPMENT_LOG.md  DRAG_DROP_TESTING_GUIDE.md  EXECUTIVE_SUMMARY.md  IMAGE_LIBRARY_GUIDE.md  ISSUE_26_BROWSER_TEST_REPORT.md  ISSUE_26_COMPLETION.md  ISSUE_26_FINAL_SUMMARY.md  ISSUE_26_PLAN.md  ISSUE_26_TESTING.md  MOBILE_CAMERA_TESTING.md  MVP_DEFINITION.md  OBF_SPECIFICATION.md  PRODUCT_ROADMAP.md  RALPH_LOOP.md  REPOSITORY_CONFIGURATION.md  SPRINT_1_PROGRESS.md  SPRINT_2_PLAN.md  (+8 more)
(+98 files in other folders)
