[package]
name = "lovewords-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Core library for LoveWords AAC application"
repository = "https://github.com/wildcard/lovewords"
keywords = ["aac", "accessibility", "speech", "communication"]
categories = ["accessibility"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.0"
